@@ -2,7 +2,6 @@ DESTDIR ?= /
 
 PREFIXBIN=$(DESTDIR)/usr/bin
 PREFIXLIB=$(DESTDIR)/usr/lib/devicesinlan
-PREFIXETC=$(DESTDIR)/etc/devicesinlan
 PREFIXSHARE=$(DESTDIR)/usr/share/devicesinlan
 PREFIXLOCALE=$(DESTDIR)/usr/share/locale/
 
@@ -24,7 +23,6 @@ install:
 	install -o root -d $(PREFIXBIN)
 	install -o root -d $(PREFIXLIB)
 	install -o root -d $(PREFIXSHARE)
-	install -o root -d $(PREFIXETC)
 	install -m 644 -o root ui/*.py $(PREFIXLIB)
 	install -m 644 -o root images/*.py $(PREFIXLIB)
 	install -m 644 -o root images/devicesinlan.png $(DESTDIR)/usr/share/pixmaps/
@@ -33,12 +31,10 @@ install:
 	install -m 755 -o root devicesinlan.py $(PREFIXBIN)/devicesinlan
 	install -m 755 -o root libdevicesinlan.py $(PREFIXLIB)
 	install -m 644 -o root GPL-3.txt CHANGELOG.txt AUTHORS.txt RELEASES.txt INSTALL.txt ieee-oui.txt $(PREFIXSHARE)
-	install -m 644 -o root known.txt.dist $(PREFIXETC)
 	install -m 644 -o root i18n/*.qm $(PREFIXLIB)
 
 uninstall:
 	rm $(PREFIXBIN)/devicesinlan
-	rm $(PREFIXETC)/known.txt.dist
 	rm $(DESTDIR)/usr/share/applications/devicesinlan.desktop
 	rm $(DESTDIR)/usr/share/pixmaps/devicesinlan.png
 	rm -Rf $(PREFIXLIB)
