@@ -4,4 +4,5 @@ devicesinlan-0.3.0 <==>  svn -r 7 checkout svn://svn.code.sf.net/p/devicesinlan/
 devicesinlan-0.4.0 <==>  svn -r 13 checkout svn://svn.code.sf.net/p/devicesinlan/code/ devicesinlan
 devicesinlan-0.5.0 <==>  svn -r 15 checkout svn://svn.code.sf.net/p/devicesinlan/code/ devicesinlan
 devicesinlan-0.6.0 <==>  svn -r 30 checkout svn://svn.code.sf.net/p/devicesinlan/code/ devicesinlan
+devicesinlan-0.7.0 <==>  svn -r 61 checkout svn://svn.code.sf.net/p/devicesinlan/code/ devicesinlan
 
