@@ -1,3 +1,0 @@
-00:00:00:00:00:00 = Example of devices
-00:00:00:00:00:01 = Another example
-
