@@ -1,10 +1,12 @@
 #!/bin/bash
-DIR=devicesinlan-`cat devicesinlan.py | grep 'version="'| cut --delimiter='"'  -f 2`
+DIR=devicesinlan-`cat libdevicesinlan.py | grep 'version="'| cut --delimiter='"'  -f 2`
 FILE=$DIR.tar.gz
 echo "Este script crea el fichero $FILE para ser subido al proyecto"
 
 mkdir $DIR
-mkdir $DIR/po
+mkdir $DIR/images
+mkdir $DIR/i18n
+mkdir $DIR/ui
 
 cp      Makefile \
         AUTHORS.txt \
@@ -13,14 +15,20 @@ cp      Makefile \
         INSTALL.txt \
         RELEASES.txt \
         devicesinlan.py \
-        devicesinlan.jpg \
-        known.txt.dist \
         ieee-oui.txt \
         $DIR
 
-cp      po/es.po \
-        po/devicesinlan.pot\
-        $DIR/po
+cp      images/*.png \
+        images/*.ico \
+        images/*.qrc \
+        $DIR/images
+
+cp      i18n/*.ts \
+        $DIR/i18n
+
+cp      ui/*.ui \
+        ui/frm*.py \
+        $DIR/ui
 
 tar cvz $DIR -f $FILE
 rm -R $DIR
